# CKB-Academy-Progress

./: .gitignore  README.md  WEEK1_REPORT.md  WEEK2_REPORT.md  WEEK3_REPORT.md  package-lock.json
ckbfs-type-script/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  capsule.toml  ckb.ld  deployment.toml
ckbfs-type-script/.cargo/: config.toml
ckbfs-type-script/.github/workflows/: ci.yml
ckbfs-type-script/docs/: transaction-lifecycle.md  validation-flow.md  week3-lumos-plan.md
ckbfs-type-script/frontend/: next.config.ts  package-lock.json  package.json
ckbfs-type-script/frontend/app/: globals.css  layout.tsx  page.tsx
ckbfs-type-script/frontend/components/: Dashboard.tsx  FileCard.tsx  FileDelete.tsx  FileUpdate.tsx  FileUpload.tsx  FileViewer.tsx  StatsBar.tsx  TxStatus.tsx  WalletConnect.tsx  WalletModal.tsx
ckbfs-type-script/frontend/context/: WalletContext.tsx
ckbfs-type-script/frontend/hooks/: useCkbfs.ts  useWallet.ts
ckbfs-type-script/frontend/services/: ckb.ts  indexer.ts  txBuilder.ts  wallet.ts
ckbfs-type-script/frontend/types/: index.ts
ckbfs-type-script/frontend/utils/: encoding.ts  format.ts  toast.tsx
ckbfs-type-script/frontend/wallets/: JoyIDAdapter.ts  PrivateKeyAdapter.ts  UniPassAdapter.ts  WalletAdapter.ts  _emptyModule.ts
ckbfs-type-script/outputs/: cell_data.rs  deployment.json  entry.rs  error.rs  hash.rs  main.rs
ckbfs-type-script/prompts/: 01_initial_idea_prompt.md  02_upgrade_prompt.md  03_structure_prompt.md
ckbfs-type-script/scripts/: patch_elf.py
ckbfs-type-script/sdk/: .env.example  .gitignore  config.js  index.js  package-lock.json  package.json
ckbfs-type-script/sdk/builder/: ChangeOutput.js  (+3 more)
ckbfs-type-script/src/: cell_data.rs  entry.rs  error.rs  hash.rs  lib.rs  main.rs
(+163 files in other folders)
